# remem

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LLM.md  README.md  SECURITY.md  deny.toml
.agents/plugins/: README.md  marketplace.json  remem-ffi.md  remem-rust.md  remem-testing.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bench.yml  ci.yml  docker-ghcr.yml  nightly.yml  publish.yml  release.yml  rust.yml  sdk-python.yml  sdk-typescript.yml  security.yml  smoke.yml  tests.yml
bindings/dart/: README.md
bindings/kotlin/: README.md
bindings/react-native/: README.md
bindings/swift/: README.md
docs/: ARCHITECTURE.md  PROVIDERS.md  REASONING.md
evals/: README.md
examples/: agent_loop.py  agent_loop.ts
libremem/: CMakeLists.txt  README.md
libremem/src/document/: chunker.h
libremem/src/embedding/: engine.cpp  engine.h  tokenizer.cpp  tokenizer.h
libremem/src/ffi/: remem.cpp  remem.h
libremem/src/vector_store/: index.cpp  index.h
models/: README.md
remem-api/: Cargo.toml
remem-api/src/: main.rs
remem-api/src/middleware/: auth.rs  mod.rs
remem-api/src/routes/: memories.rs  mod.rs  sessions.rs
remem-cli/: Cargo.toml
remem-cli/src/: main.rs
remem-core/: Cargo.toml  build.rs
remem-core/src/: config.rs  lib.rs
remem-core/src/ffi/: mod.rs
remem-core/src/memory/: mod.rs  types.rs
remem-core/src/providers/: anthropic.rs  embeddings.rs  google.rs  local.rs  mock.rs  mod.rs  openai.rs
remem-core/src/reasoning/: consolidation.rs  contradiction.rs  mod.rs  resolution.rs  retrieval.rs  scoring.rs
remem-core/src/storage/: mod.rs  sqlite.rs  vector.rs
remem-core/tests/: test_config.rs  test_reasoning.rs  test_sqlite_store.rs  test_vector_index.rs
remem-mcp/: Cargo.toml
remem-mcp/src/: main.rs
remem-mcp/src/tools/: consolidate.rs  forget.rs  mod.rs  recall.rs  search.rs  store.rs  update.rs
remem-mcp/src/transport/: mod.rs  stdio.rs
sdk/python/: README.md  pyproject.toml
sdk/python/adapters/: README.md
sdk/python/examples/: agent_loop.py
sdk/python/remem/: __init__.py  client.py  config.py  models.py
sdk/python/tests/: conftest.py  test_client.py  test_models.py
sdk/rust/: README.md
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/__tests__/: client.test.ts
sdk/typescript/adapters/: README.md
sdk/typescript/src/: index.test.ts  index.ts  types.ts
