[package]
name = "remem-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for remem — manage, serve, and inspect AI agent memory"

[[bin]]
name = "remem"
path = "src/main.rs"

[dependencies]
remem-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
