[package]
name = "remem-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for remem — reasoning memory layer for AI agents"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
ndarray = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
